# OpenRudder

./: .gitignore  BLUETOOTH.md  README.md
.github/workflows/: build-nrf52.yml  release.yml
config-tool/: common.py  get_config.py  set_config.py
config-tool-web/: code.js  examples.js  index.html  nus-tester.js  usages.js
firmware/: CMakeLists.txt  remapper_bluetooth_pico_w.uf2
firmware-bluetooth/: CMakeLists.txt  build-nano33-ble-sense.ps1  build-xiao-nrf52840-sense.ps1  flash-nano33-ble-sense.ps1
firmware-bluetooth/boards/arm/arduino_nano_33_ble/: arduino_nano_33_ble_sense_lsm9ds1.conf  arduino_nano_33_ble_sense_lsm9ds1.overlay
firmware-bluetooth/boards/arm/seeed_xiao_nrf52840/: seeed_xiao_nrf52840_sense.conf  seeed_xiao_nrf52840_sense.overlay
firmware-bluetooth/dts/bindings/sensor/: st,lsm9ds1-local.yaml  st,lsm9ds1-mag-local.yaml
firmware-bluetooth/src/: activity_led.h  apds9960_sensor.cc  apds9960_sensor.h  ble_nus.cc  ble_nus.h  gpio.cc  gpio.h  imu_descriptor.h  lsm9ds1_local.cc  lsm9ds1_local.h  main.cc  mic_level.cc  mic_level.h  motion_fusion.cc  motion_fusion.h  motion_sensor.cc  motion_sensor.h  sensor_inputs.cc  sensor_inputs.h
firmware/src/: ble_button_led.cc  ble_nus.cc  ble_nus.h  ble_remapper.gatt  ble_shared.h  btstack_config.h  config.cc  globals.cc  globals.h  main.cc  nus_protocol.cc  nus_protocol.h  platform.h  remapper.cc  remapper.h  remapper_bluetooth.cc  tinyusb_stuff.cc  types.h
transmitter-ble-web/: code.js  index.html
